@@ -83,6 +83,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 		<!--  https://mvnrepository.com/artifact/org.modelmapper/modelmapper  -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
@@ -110,7 +115,10 @@
 							<version>1.18.30</version> <!-- Or latest stable version -->
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
